--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
                 <a href="{% url 'apropos' %}" class="hover:bg-gray-700 px-3 py-2 rounded">À propos</a>
                 <a href="{% url 'contact' %}" class="hover:bg-gray-700 px-3 py-2 rounded">Contact</a>
                 <a href="{% url 'politique' %}" class="hover:bg-gray-700 px-3 py-2 rounded">Politique</a>
-                <a href="{% url 'liste_invites' %}" class="hover:bg-gray-700 px-3 py-2 rounded">visibilité</a>
+                <a href="{% url 'ads_and_invites_feed' %}" class="hover:bg-gray-700 px-3 py-2 rounded">Pub visibilité</a>
                 <a href="{% url 'lottery_list' %}" class="hover:bg-gray-700 px-3 py-2 rounded">lottery</a>
                 <!-- Dropdown Immo -->
                 <!-- Dropdown Immo -->
@@ -146,7 +146,7 @@
             <a href="{% url 'apropos' %}" class="block px-4 py-2 text-white hover:bg-gray-700">À propos</a>
             <a href="{% url 'contact' %}" class="block px-4 py-2 text-white hover:bg-gray-700">Contact</a>
             <a href="{% url 'politique' %}" class="block px-4 py-2 text-white hover:bg-gray-700">Politique</a>
-            <a href="{% url 'liste_invites' %}" class="block px-4 py-2 text-white hover:bg-gray-700"> visibilité</a>
+            <a href="{% url 'ads_and_invites_feed' %}" class="block px-4 py-2 text-white hover:bg-gray-700"> Pub visibilité</a>
             <a href="{% url 'lottery_list' %}" class="block px-4 py-2 text-white hover:bg-gray-700">lottery_list</a>
            <!-- Dropdown Immo pour Mobile -->
 <div class="relative">
