--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -44,7 +44,7 @@
         <i class="bx bx-star text-xl mr-3 text-purple-600"></i> Mes points de fidélité
       </a>
       <a href="{% url 'visite_money_solde' %}" class="block px-4 py-2 bg-gray-100 rounded hover:bg-gray-200 flex items-center">
-        <i class="bx bx-wallet text-xl mr-3 text-green-600"></i> Mon solde VisiteMoney
+        <i class="bx bx-wallet text-xl mr-3 text-green-600"></i> Mon solde WinaMoney
       </a>
       
 
