--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -63,6 +63,9 @@
   <i class="bx bx-credit-card text-xl mr-3 text-blue-600"></i>
    Mes invitations payées
 </a>
+<a href="{% url 'utilisateurs_proches' %}" class="block px-4 py-2 bg-gray-100 rounded hover:bg-gray-200 flex items-center">
+  <i class="bx bx-user text-xl mr-3 text-purple-600"></i> Nombre d'utilisateurs proches
+</a>
       <a href="{% url 'create_ad' %}" class="block px-4 py-2 bg-gray-100 rounded hover:bg-gray-200 flex items-center">
         <i class="bx bx-bullhorn text-xl mr-3 text-purple-600"></i> Créer une publicité
       </a>
