fixe remove locate

--- a/templates/base.html
+++ b/templates/base.html
@@ -440,7 +440,7 @@
       </script>
       
     
-      <script>
+      {% comment %} <script>
         if (navigator.geolocation) {
           navigator.geolocation.getCurrentPosition(function(position) {
             fetch("{% url 'update_location' %}", {
@@ -456,7 +456,7 @@
             });
           });
         }
-      </script>
+      </script> {% endcomment %}
     
     <script src="{% static 'js/script.js' %}"></script>
     <div id="add-to-cart-modal" class="hidden fixed top-5 right-5 bg-green-100 text-green-800 px-4 py-2 rounded shadow z-50">
